--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="script/class.js "></script>
+<script src="script/promise.js"></script>
 </body>
 </html>
