--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="js/number/number.js"></script>
+<script src="js/string/str.js"></script>
 </body>
 </html>
