--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="js/statement/statement.js"></script>
+<script src="js/swich/switch.js"></script>
 </body>
 </html>
