--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="js/func/function.js"></script>
+<script src="js/array/array.js"></script>
 </body>
 </html>
