--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     <span></span>
 
     <a href="#">Some link</a>
-    <script src="js/array2/array2.js"></script>
+    <script src="js/dom2/dom.js"></script>
   </body>
 </html>
