--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div></div>
     <div></div> -->
-    <div>
+    <!-- <div>
       <article>
         <p>
           Lorem ipsum dolor sit amet, odio omnesque ius cu, quo ex atqui
@@ -34,7 +34,16 @@
     </ul>
     <span></span>
 
-    <a href="#">Some link</a>
-    <script src="js/dom2/class.js"></script>
+    <a href="#">Some link</a> -->
+    <!-- <script src="js/dom2/class.js"></script> -->
+
+    <button id="btn-msg" data-text=”Custom message”>Show message</button>
+    <button id="btn-generate">Generate item</button>
+    <p><strong id="tag">Tag:</strong></p>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+    </ul>
+    <script src="js/dom3/class.js"></script>
   </body>
 </html>
