--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/styles.css">
     <title>Document</title>
   </head>
   <body>
@@ -37,13 +38,44 @@
     <a href="#">Some link</a> -->
     <!-- <script src="js/dom2/class.js"></script> -->
 
-    <button id="btn-msg" data-text=”Custom message”>Show message</button>
+    <!-- <button id="btn-msg" data-text=”Custom message”>Show message</button>
     <button id="btn-generate">Generate item</button>
     <p><strong id="tag">Tag:</strong></p>
     <ul>
       <li>Item 1</li>
       <li>Item 2</li>
     </ul>
-    <script src="js/dom3/class.js"></script>
+    <script src="js/dom3/class.js"></script> -->
+    <ul class="menu">
+      <li class="dropdown-item">
+        <span>Dropdown menu item</span>
+        <div class="dropdown-menu d-none">
+          <ul class="dropdown-list">
+            <li>Dropdown item 1</li>
+            <li>Dropdown item 2</li>
+          </ul>
+          <!-- / .dropdown-list -->
+        </div>
+        <!-- / .dropdown-menu -->
+      </li>
+      <!-- / .dropdown-item -->
+      <li>
+        <span>Menu item</span>
+      </li>
+      <!-- / li -->
+      <li class="dropdown-item">
+        <span>Dropdown menu item 2</span>
+        <div class="dropdown-menu d-none">
+          <ul class="dropdown-list">
+            <li>Second Dropdown item 1</li>
+            <li>Second Dropdown item 2</li>
+          </ul>
+          <!-- / .dropdown-list -->
+        </div>
+        <!-- / .dropdown-menu -->
+      </li>
+      <!-- / .dropdown-item -->
+    </ul>
+    <script src="js/dropdown/dropdown.js"></script> -->
   </body>
 </html>
