--- a/index.html
+++ b/index.html
@@ -1,81 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- <div>
-      <p>Text</p>
-      <p>Other</p>
-      <p>Next</p>
-      <p>Last</p>
-    </div>
-    <div></div>
-    <div></div> -->
-    <!-- <div>
-      <article>
-        <p>
-          Lorem ipsum dolor sit amet, odio omnesque ius cu, quo ex atqui
-          antiopam. At detracto menandri eos. Duo in causae viderer, graeci
-          <a href="#">reprehendunt</a> has in. Decore
-          <mark>nemore</mark> philosophia te pro, nobis legere causae ex mei,
-          odio putant mentitum ea ius. Vix nostro deserunt explicari eu.
-        </p>
-      </article>
-    </div>
-    <ul>
-      <li><a href="#">Link1</a></li>
-      <li><a href="#">Link2</a></li>
-      <li><a href="#">Link3</a></li>
-      <li><a href="#">Link4</a></li>
-    </ul>
-    <span></span>
-
-    <a href="#">Some link</a> -->
-    <!-- <script src="js/dom2/class.js"></script> -->
-
-    <!-- <button id="btn-msg" data-text=”Custom message”>Show message</button>
-    <button id="btn-generate">Generate item</button>
-    <p><strong id="tag">Tag:</strong></p>
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-    </ul>
-    <script src="js/dom3/class.js"></script> -->
-    <ul class="menu">
-      <li class="dropdown-item">
-        <span>Dropdown menu item</span>
-        <div class="dropdown-menu d-none">
-          <ul class="dropdown-list">
-            <li>Dropdown item 1</li>
-            <li>Dropdown item 2</li>
-          </ul>
-          <!-- / .dropdown-list -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    .container {
+      width: 400px;
+      height: 400px;
+      margin: 20px auto;
+      display: flex;
+    }
+ 
+    .box {
+      width: 80%;
+      height: 80%;
+      border: 1px solid black;
+      display: flex;
+      margin: auto;
+      background-color: #fff;
+      transition: all 0.2s ease-in;
+    }
+  </style>
+</head>
+<body>
+  <div class="container bg-pan-left">
+    <div class="box">
+      <div class="box">
+        <div class="box">
+          <div class="box">
+            <div class="box">
+              <div class="box">
+                <div class="box">
+                  <div class="box">
+                    <div class="box">
+                      <div class="box">
+                        <div class="box">
+                          <div class="box">
+                            <div class="box"></div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- / .dropdown-menu -->
-      </li>
-      <!-- / .dropdown-item -->
-      <li>
-        <span>Menu item</span>
-      </li>
-      <!-- / li -->
-      <li class="dropdown-item">
-        <span>Dropdown menu item 2</span>
-        <div class="dropdown-menu d-none">
-          <ul class="dropdown-list">
-            <li>Second Dropdown item 1</li>
-            <li>Second Dropdown item 2</li>
-          </ul>
-          <!-- / .dropdown-list -->
-        </div>
-        <!-- / .dropdown-menu -->
-      </li>
-      <!-- / .dropdown-item -->
-    </ul>
-    <script src="js/dropdown/dropdown.js"></script> -->
-  </body>
+      </div>
+    </div>
+  </div>
+  <script src="/js/final/box.js"></script>
+</body>
 </html>
