--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
     </div>
   </div>
   <script src="/js/final/box.js"></script>
+  <script src="/js/theory/promises.js"></script>
 </body>
 </html>
