--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     </div>
   </div>
   <script src="/js/final/box.js"></script>
-  <script src="/js/theory/fetch.js"></script>
+  <script src="/js/theory/asyncAwait.js"></script>
 </body>
 </html>
