--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
   </div>
   <script src="/js/final/box.js"></script>
   <script src="/js/theory/class.js"></script>
+  <script src="/js/encapsulation/part1.js"></script>
 </body>
 </html>
